# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rusteze_ai_artemisia"
description = "Rust-eze Robotics - ArtemisIA"
authors = ["Chiara S."]
version = "0.0.5"
edition = "2021"
exclude = [".*"]

# [lib]
# name = "rusteze_ai_artemisia"
# path = "src/lib.rs"

[dependencies]
rand = "0.8.4"
ui_lib = {git = "https://github.com/rust-eze-robotics/ui_lib.git", branch = "main"}
robotics_lib = {version = "0.1.21", registry = "kellnr"}
midgard = {version = "0.2.1", registry = "kellnr"}
spyglass = {version = "0.1.3", registry = "kellnr"}
sense_and_find_by_Rustafariani = {version = "0.1.0", registry = "kellnr"}
OhCrab_collection = {version = "0.1.0", registry = "kellnr"}
giotto_tool = {version = "1.0.0", registry = "kellnr"}
bob_lib = {version = "0.1.2", registry = "kellnr"}